<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display"
        app:layout_constraintVertical_bias="0.95"
        tools:layout_editor_absoluteX="30dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/deleteBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="1.5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="deleteButton"
                android:text="@string/delete"
                android:textColor="@color/textColor"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="1.5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="clearButton"
                android:text="@string/clear"
                android:textColor="@color/textColor"
                android:textSize="28sp" />

            <Button
                android:id="@+id/parenthesisBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="1.5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="deleteButton"
                android:text="@string/parenthesis"
                android:textColor="@color/textColor"
                android:textSize="28sp" />

            <Button
                android:id="@+id/powerBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="1.5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="clearButton"
                android:text="@string/power"
                android:textColor="@color/textColor"
                android:textSize="28sp" />

            <Button
                android:id="@+id/addBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="1.5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="addButton"
                android:text="@string/add"
                android:textColor="@color/textColor"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/nineBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:background="@drawable/button_background"
                android:layout_margin="1.5dp"
                android:layout_weight="1"
                android:onClick="nineButton"
                android:text="@string/nine"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eightBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:layout_margin="1.5dp"
                android:onClick="eightButton"
                android:text="@string/eight"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

            <Button
                android:id="@+id/sevenBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="sevenButton"
                android:background="@drawable/button_background"
                android:layout_margin="1.5dp"
                android:text="@string/seven"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

            <Button
                android:id="@+id/minusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="1.5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="subtractButton"
                android:text="@string/subtract"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sixBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="sixButton"
                android:background="@drawable/button_background"
                android:layout_margin="1.5dp"
                android:text="@string/six"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

            <Button
                android:id="@+id/fiveBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="fiveButton"
                android:background="@drawable/button_background"
                android:layout_margin="1.5dp"
                android:text="@string/five"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

            <Button
                android:id="@+id/fourBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="fourButton"
                android:background="@drawable/button_background"
                android:layout_margin="1.5dp"
                android:text="@string/four"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

            <Button
                android:id="@+id/divideBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="1.5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="divideButton"
                android:text="@string/divide"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/threeBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="1.5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="threeButton"
                android:text="@string/three"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

            <Button
                android:id="@+id/twoBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="twoButton"
                android:background="@drawable/button_background"
                android:layout_margin="1.5dp"
                android:text="@string/two"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

            <Button
                android:id="@+id/oneBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="oneButton"
                android:background="@drawable/button_background"
                android:layout_margin="1.5dp"
                android:text="@string/one"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

            <Button
                android:id="@+id/multiplyBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="1.5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="multiplyButton"
                android:text="@string/multiply"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/negativeBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="1.5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="zeroButton"
                android:text="@string/zero"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                tools:text="@string/negative" />

            <Button
                android:id="@+id/decimalBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="decimalButton"
                android:background="@drawable/button_background"
                android:layout_margin="1.5dp"
                android:text="@string/decimal"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

            <Button
                android:id="@+id/zeroBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="1.5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="zeroButton"
                android:text="@string/zero"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

            <Button
                android:id="@+id/equalsBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="equalButton"
                android:background="@drawable/equals_button_background"
                android:layout_margin="1.5dp"
                android:text="@string/equals"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/text"
        android:textAlignment="textEnd"
        android:textColor="@color/textColor"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/darkText"
        app:layout_constraintBottom_toTopOf="@+id/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182" />
</androidx.constraintlayout.widget.ConstraintLayout>